@@ -32,9 +32,11 @@ namespace BFL
         ,_num_states(num_states)
   {
     //discrete pdf has dimension 1
-    _Values_p = new ColumnVector(num_states);
-    _SumWeights = 1.0;
-    (*_Values_p) = 1.0/NumStatesGet();
+    _Values_p = new vector<Probability>(num_states);
+    for (int i=0; i<NumStatesGet();i++)
+    {
+        (*_Values_p)[i] = (Probability)(1.0/NumStatesGet());
+    }
     _CumPDF.insert(_CumPDF.begin(),num_states+1,0.0);
 #ifdef __CONSTRUCTOR__
     cout << "DiscretePdf constructor\n";
@@ -44,7 +46,7 @@ namespace BFL
   DiscretePdf::DiscretePdf(const DiscretePdf & my_dpdf):Pdf<int>(my_dpdf)
         ,_num_states(my_dpdf.NumStatesGet())
   { 
-    _Values_p = new ColumnVector(this->NumStatesGet());
+    _Values_p = new vector<Probability>(this->NumStatesGet());
     (*_Values_p) = my_dpdf.ProbabilitiesGet();
     _CumPDF.insert(_CumPDF.begin(),NumStatesGet()+1,0.0);
     CumPDFUpdate();
@@ -68,32 +70,51 @@ namespace BFL
   }
 
 
-  Probability DiscretePdf::ProbabilityGet(const unsigned int& input) const
+  Probability DiscretePdf::ProbabilityGet(const unsigned int& state) const
   {
-    assert((int)input >= 0 && input < NumStatesGet());
+    assert((int)state >= 0 && state < NumStatesGet());
 
-    return (*_Values_p)(input+1);
+    return (*_Values_p)[state];
   }
 
-  bool DiscretePdf::ProbabilitySet(unsigned int input, Probability a) 
+  bool DiscretePdf::ProbabilitySet(unsigned int state, Probability a) 
   {
-    assert((int)input >= 0 && input < NumStatesGet());
-
-    (*_Values_p)(input+1) = a;
+    assert((int)state >= 0 && state < NumStatesGet());
+    assert(a<=1);
+    
+    // renormalize other probabilities such that sum of probabilities will be
+    // one after the probability of state is set to a
+    // This should keep the probabilities normalized
+    Probability old_prob_state = ProbabilityGet(state);
+    if (old_prob_state!=1) {
+        double normalization_factor = (1-a)/(1-old_prob_state);
+        for (int i=0; i<NumStatesGet();i++)
+        {
+            (*_Values_p)[i] = (Probability)( (double)( (*_Values_p)[i] )* normalization_factor);
+        }
+    }
+    else{
+        for (int i=0; i<NumStatesGet();i++)
+        {
+            (*_Values_p)[i] = (Probability)( (1-a)/(NumStatesGet()-1));
+        }
+    }
+    (*_Values_p)[state] = a;
     return CumPDFUpdate();
   }
 
-  ColumnVector DiscretePdf::ProbabilitiesGet() const
+  vector<Probability> DiscretePdf::ProbabilitiesGet() const
   {
     return *_Values_p;
   }
 
-  bool DiscretePdf::ProbabilitiesSet(ColumnVector & v)
+  bool DiscretePdf::ProbabilitiesSet(vector<Probability> & v)
   {
-    assert(v.rows() == NumStatesGet());
+    assert(v.size() == NumStatesGet());
 
     *_Values_p = v;
-    return CumPDFUpdate();
+    //normalize the probabilities and update the cumulative sum
+    return (NormalizeProbs() && CumPDFUpdate());
   }
 
   // For optimal performance!
@@ -104,49 +125,48 @@ namespace BFL
 			   void * args) const
   {
     switch(method)
-      {
+    {
       case DEFAULT: // O(N log(N) efficiency)
-	return Pdf<int>::SampleFrom(list_samples, num_samples,method,args);
+	  return Pdf<int>::SampleFrom(list_samples, num_samples,method,args);
 
       case RIPLEY: // See mcpdf.cpp for more explanation
-	{
-	  list_samples.resize(num_samples);
-	  // GENERATE N ORDERED IID UNIFORM SAMPLES
-	  std::vector<double> unif_samples(num_samples);
-	  for ( unsigned int i = 0; i < num_samples ; i++)
-	    unif_samples[i] = runif();
+	  {
+	    list_samples.resize(num_samples);
+	    // GENERATE N ORDERED IID UNIFORM SAMPLES
+	    std::vector<double> unif_samples(num_samples);
+	    for ( unsigned int i = 0; i < num_samples ; i++)
+	      unif_samples[i] = runif();
 
-	  /* take n-th racine of u_N */
-	  unif_samples[num_samples-1] = pow(unif_samples[num_samples-1],
-					   double (1.0/num_samples));
-	  /* rescale samples */
-	  for ( int i = num_samples-2; i >= 0 ; i--)
-	      unif_samples[i] = pow(unif_samples[i], double (1.0/(i+1))) * unif_samples[i+1];
+	    /* take n-th racine of u_N */
+	    unif_samples[num_samples-1] = pow(unif_samples[num_samples-1],
+	  				   double (1.0/num_samples));
+	    /* rescale samples */
+	    for ( int i = num_samples-2; i >= 0 ; i--)
+	        unif_samples[i] = pow(unif_samples[i], double (1.0/(i+1))) * unif_samples[i+1];
 
-	  // CHECK WHERE THESE SAMPLES ARE IN _CUMPDF
-	  unsigned int index = 0;
-	  unsigned int num_states = NumStatesGet();
-	  vector<double>::const_iterator CumPDFit = _CumPDF.begin();
-	  vector<Sample<int> >::iterator sit = list_samples.begin();
+	    // CHECK WHERE THESE SAMPLES ARE IN _CUMPDF
+	    unsigned int index = 0;
+	    unsigned int num_states = NumStatesGet();
+	    vector<double>::const_iterator CumPDFit = _CumPDF.begin();
+	    vector<Sample<int> >::iterator sit = list_samples.begin();
 
-	  for ( unsigned int i = 0; i < num_samples ; i++)
-	    {
-	      while ( unif_samples[i] > *CumPDFit )
+	    for ( unsigned int i = 0; i < num_samples ; i++)
 	      {
-		// check for internal error
-		assert(index <= num_states);
-		index++; CumPDFit++;
+	        while ( unif_samples[i] > *CumPDFit )
+	        {
+	  	// check for internal error
+	  	assert(index <= num_states);
+	  	index++; CumPDFit++;
+	        }
+	      *sit = index; 
+	      sit++;
 	      }
-	    *sit = index; 
-	    sit++;
-	    }
-	  return true;
-	}
+	    return true;
+	  }
       default:
-	cerr << "DiscretePdf::Samplefrom(int, void *): No such sampling method" 
-	     << endl;
-	return false;
-      }
+	    cerr << "DiscretePdf::Samplefrom(int, void *): No such sampling method" << endl;
+	    return false;
+    }
   }
 
 
@@ -177,38 +197,40 @@ namespace BFL
       }
   }
 
-  bool DiscretePdf::SumWeightsUpdate()
+  bool DiscretePdf::NormalizeProbs()
   {
-    double SumOfWeights = 0.0; 
-    for ( unsigned int row = 1; row < NumStatesGet() + 1; row++) SumOfWeights += (*_Values_p)(row);
-    if (SumOfWeights > 0){
-      this->_SumWeights = SumOfWeights;
+    double SumOfProbs = 0.0; 
+    for ( unsigned int i = 0; i < NumStatesGet() ; i++){
+        SumOfProbs += (*_Values_p)[i];
+    } 
+    if (SumOfProbs > 0){
+      for ( unsigned int i = 0; i < NumStatesGet() ; i++){
+          (*_Values_p)[i] = (Probability)( (double) ( (*_Values_p)[i]) /SumOfProbs);
+      }
       return true;
     }
     else{
-      cerr << "DiscretePdf::SumWeightsUpdate(): SumOfWeithts = " << SumOfWeights << endl;
+      cerr << "DiscretePdf::NormalizeProbs(): SumOfProbs = " << SumOfProbs << endl;
       return false;
     }
   }
 
   bool DiscretePdf::CumPDFUpdate()
   {
-    // Update Sum Of Weights
-    if (!SumWeightsUpdate()) return false;
-    
+    // precondition: sum of probabilities should be 1
     double CumSum=0.0; 
     static vector<double>::iterator CumPDFit;
     CumPDFit = _CumPDF.begin(); 
     *CumPDFit = 0.0;
 
     // Calculate the Cumulative PDF
-    for ( unsigned int i = 1; i < NumStatesGet()+1; i++)
-      {
-	CumPDFit++;
-	// Calculate the __normalised__ Cumulative sum!!!
-	CumSum += ( (*_Values_p)(i) / _SumWeights);
-	*CumPDFit = CumSum;
-      }
+    for ( unsigned int i = 0; i < NumStatesGet(); i++)
+    {
+	    CumPDFit++;
+	    // Calculate the __normalised__ Cumulative sum!!!
+	    CumSum += ( (*_Values_p)[i] );
+	    *CumPDFit = CumSum;
+    }
     // Check if last element of valuelist is +- 1
     assert( (_CumPDF[NumStatesGet()] >= 1.0 - NUMERIC_PRECISION) &&
 	    (_CumPDF[NumStatesGet()] <= 1.0 + NUMERIC_PRECISION) );
